--- a/src/components/Home/ChooseUs/ChooseUs.css
+++ b/src/components/Home/ChooseUs/ChooseUs.css
@@ -30,6 +30,7 @@
 }
 .card .content {
     padding: 20px 20px 10px 20px;
+    height: 300px;
 }
 .card[data-color="blue"] .category {
     color: #7a9e9f;
